# company_name_matching

./: setup.cfg  setup.py  test.py
company_name_matching/company_name_matching/: __init__.py
company_name_matching/data/: elf_company.csv
scr/company_name_matching/: pyproject.toml  setup.cfg
src/company_name_matching.egg-info/: PKG-INFO  SOURCES.txt
