[metadata]
name = company_name_matching
version = 0.0.1
author = camillebrl
author_email = camille.barboule@gmail.com
description = Give a score for 2 companies to be the same
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camillebrl/company_name_matching.git
project_urls =
    Bug Tracker = https://github.com/camillebrl/company_name_matching.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src